Configure project for Jasmine tests

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,7 +25,7 @@
         </div>
     </fieldset>
 </form>
-<p>{{statusText}}</p>
+<p>{{statusText()}}</p>
 <!-- game board -->
 <table border="1">
     <tr ng-repeat="row in board.rows">
