--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Minesweeper Kata</title>
     <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular/angular-resource.js"></script>
     <script src="js/app.js"></script>
     <script src="js/GameController.js"></script>
     <script src="js/GameServices.js"></script>
