--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,7 +26,7 @@
         </div>
     </fieldset>
 </form>
-<p>{{statusText()}}</p>
+<p>{{statusText}}</p>
 <!-- game board -->
 <table border="1">
     <tr ng-repeat="row in board.rows">
