--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,7 @@
     <script src="js/app.js"></script>
     <script src="js/GameController.js"></script>
     <script src="js/GameServices.js"></script>
+    <script src="js/directives.js"></script>
 </head>
 <body ng-controller="GameController">
 
@@ -30,7 +31,7 @@
 <!-- game board -->
 <table border="1">
     <tr ng-repeat="row in board.rows">
-        <td ng-repeat="field in row.fields"><pre>{{field.value}}</pre></td>
+        <td ng-repeat="field in row.fields"><tile text="{{field.value}}" tileType="{{field.type}}" /></td>
     </tr>
 </table>
 
