Implement tile revealing with single server call

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,7 +31,8 @@
 <!-- game board -->
 <table border="1">
     <tr ng-repeat="row in board.rows">
-        <td ng-repeat="field in row.fields"><tile text="{{field.value}}" tileType="{{field.type}}" /></td>
+        <td ng-repeat="field in row.fields">
+            <tile text="{{field.value}}" tileType="{{field.type}}" ng-click="step(field.x, field.y)" /></td>
     </tr>
 </table>
 
